# Learning-Management-System

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: backend.yml  backend_build.yml  build.yml  frontend_build.yml  pr.yml  release.yml
backend/: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/.github/workflows/: main.yml  pr.yml  test.yml
backend/api/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_rename_question_answer_questionanswer_and_more.py  0003_rename_qa_id_questionanswer_question_answer_id_and_more.py
backend/backend/: settings.py  urls.py
backend/templates/email/: password_reset.html
backend/userauths/: admin.py  models.py  tests.py
backend/userauths/migrations/: 0001_initial.py  0002_alter_user_username.py
frontend/: .gitignore  index.html  package.json  vite.config.js
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/src/: App.jsx.html  index.html  main.jsx.html
frontend/coverage/src/layouts/: MainWrapper.jsx.html  PrivateRoute.jsx.html  index.html
frontend/coverage/src/store/: auth.js.html  (+1 more)
frontend/coverage/store/: auth.js.html  index.html
frontend/coverage/utils/: auth.js.html  axios.js.html  constants.js.html  index.html
frontend/src/: App.jsx  App.test.jsx  index.css  main.jsx  main.test.jsx
frontend/src/layouts/: MainWrapper.jsx  MainWrapper.test.jsx  PrivateRoute.jsx  PrivateRoute.test.jsx
frontend/src/store/: auth.js
frontend/src/utils/: auth.js  auth.test.js  axios.js  constants.js  useAxios.js  useAxios.test.js
(+28 files in other folders)
